RESOLVED FIXED178278
REGRESSION (r222670 and r222732): RTL truncated text may not be drawn
https://bugs.webkit.org/show_bug.cgi?id=178278
Summary REGRESSION (r222670 and r222732): RTL truncated text may not be drawn
Daniel Bates
Reported 2017-10-13 12:02:53 PDT
Truncated RTL text may not be drawn.
Attachments
Test (381 bytes, text/html)
2017-10-13 12:04 PDT, Daniel Bates
no flags
[Screenshot] Expected behavior (17.86 KB, image/png)
2017-10-13 12:05 PDT, Daniel Bates
no flags
Patch and layout test (11.15 KB, patch)
2017-10-15 14:58 PDT, Daniel Bates
no flags
Patch for Windows EWS (11.16 KB, patch)
2017-10-15 21:06 PDT, Daniel Bates
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (1.00 MB, application/zip)
2017-10-15 22:41 PDT, Build Bot
no flags
Patch for iOS and Windows EWS (11.84 KB, patch)
2017-10-16 12:17 PDT, Daniel Bates
buildbot: commit-queue-
Archive of layout-test-results from ews121 for ios-simulator-wk2 (1.14 MB, application/zip)
2017-10-16 15:48 PDT, Build Bot
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-13 12:03:16 PDT
Daniel Bates
Comment 2 2017-10-13 12:04:28 PDT
Daniel Bates
Comment 3 2017-10-13 12:05:27 PDT
Created attachment 323723 [details] [Screenshot] Expected behavior
Daniel Bates
Comment 4 2017-10-15 14:58:44 PDT
Created attachment 323850 [details] Patch and layout test
Daniel Bates
Comment 5 2017-10-15 21:06:13 PDT
Created attachment 323870 [details] Patch for Windows EWS
Build Bot
Comment 6 2017-10-15 22:41:33 PDT
Comment on attachment 323870 [details] Patch for Windows EWS Attachment 323870 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4868414 New failing tests: fast/text/ellipsis-text-rtl.html
Build Bot
Comment 7 2017-10-15 22:41:34 PDT
Created attachment 323873 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Daniel Bates
Comment 8 2017-10-16 12:17:29 PDT
Created attachment 323927 [details] Patch for iOS and Windows EWS
Build Bot
Comment 9 2017-10-16 15:48:46 PDT
Comment on attachment 323927 [details] Patch for iOS and Windows EWS Attachment 323927 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4875008 New failing tests: fast/text/ellipsis-text-rtl.html
Build Bot
Comment 10 2017-10-16 15:48:48 PDT
Created attachment 323949 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Daniel Bates
Comment 11 2017-10-17 10:05:00 PDT
Note You need to log in before you can comment on or make changes to this bug.